00-first-steps/some-simple-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: test
    foo: web-server
  name: my-first-pod
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: cute-little-container
  restartPolicy: Never
