00-first-steps/foo-server-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: foo-server-svc
spec:
  selector:
    foo: web-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
