00-first-steps/foo-server-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foo-server-ingress
spec:
  backend:
    serviceName: foo-server-svc
    servicePort: 80
